Added flag to suppress warnings and fixed a slight bug
git-svn-id: https://svn.cms.waikato.ac.nz/svn/weka/branches/stable-3-8@15454 e0a1b77d-ad91-4216-81b1-defd5f83fa92